# swarthmore_compling

./: README.md
apertium-eng/: Makefile  Makefile.in  aclocal.m4  config.status  configure
apertium-eng/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
apertium-eng/modes/: eng-disam.mode  eng-gener.mode  eng-morph.mode  eng-tagger.mode
day1/: README.md  eresend1  hsaunde1  jhan3  ndufiti1.txt  rcheruk1  spark9  zkelly1  zrobins2
ling073-lkt/: AUTHORS  Makefile  apertium-lkt.lkt.twol  apertium-lkt.pc  configure  configure.ac  lkt.zhfst
ling073-lkt-corpus/: MANIFEST.txt  README.md  lkt-eng.corpus.basic.txt  lkt.bible.mark.txt  lkt.corpus.basic.txt  lkt.news.woihanble.txt  lkt.story.anoldtimecustomatmeals.txt  lkt.story.atypicalkiddingbetweenbrothersinlaw.txt  lkt.story.geoschmidtvisionexperience.txt  lkt.story.originofthenameoglala.txt  lkt.story.speechatathanksgivingfeast.txt  lkt.story.thebuffalopeople.txt  lkt.story.walega-hoksila.txt
ling073-lkt-eng/: Makefile  Makefile.in  ap_include.am  config.status  configure
ling073-lkt-eng-corpus/: README.md  eng.sentences.txt  eng.tests.txt  lkt.sentences.txt  lkt.tests.txt
ling073-lkt-eng/autom4te.cache/: output.0  (+4 more)
ling073-lkt-keyboard/: README.md
ling073-lkt/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ling073-lkt/modes/: lkt-disam.mode  lkt-gener.mode  lkt-lexd.mode  lkt-morph.mode  lkt-tagger.mode  lkt-twol.mode
ling073-lkt/test/: tests.json
ling073-lkt/tests/: commonwords.yaml  disambiguation-test.sh  lkt.yaml
tools/: coverage-hfst.sh  precisionRecall.py
(+36 files in other folders)
